--- a/README
+++ b/README
@@ -19,11 +19,10 @@ METHODS
             TODO
 
 ERRORS
-     Mine:
-       TODO
-
-     From Class::Utils::set_params():
-       Unknown parameter '%s'.
+     new():
+            Bad color define for '*' tags.
+            From Class::Utils::set_params():
+                    Unknown parameter '%s'.
 
 EXAMPLE
     TODO
