--- a/README
+++ b/README
@@ -69,7 +69,8 @@ AUTHOR
     Michal Špaček skim@cpan.org.
 
 LICENSE AND COPYRIGHT
-    BSD license.
+     © Michal Špaček 2011-2014
+     BSD 2-Clause License
 
 VERSION
     0.01
