--- a/TODO
+++ b/TODO
@@ -2,7 +2,8 @@ TODO
 ====
 1. Dodelat testy.
 2. Dodelat prepinac ruznych vystupu.
-3.
+3. Do prikladu udelat argument pro vystupni soubor.
+4.
 
 Applied
 =======
