--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.02
+ - Add test for constructor.
  - XXX Move GraphViz.pm in distribution to lib/PYX/GraphViz.pm due
    Module::Install requires command problem with GraphViz.pm, which isn't
    GraphViz module.
