Update copyright years.

--- a/README
+++ b/README
@@ -129,7 +129,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Špaček 2011-2014
+     © 2011-2015 Michal Špaček
      BSD 2-Clause License
 
 VERSION
