--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.03
  - Update copyright years.
+ - Rewrite to new PYX::Parser 0.02.
 
 0.02 2014-11-29T09:04:56+01:00
  - Add test for constructor.
