Add Task::PYX to SEE ALSO section in doc.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.04
+ - Add Task::PYX to SEE ALSO section in doc.
  - Move pyx2graphviz to App::PYX::GraphViz distribution.
 
 0.03 2015-01-18T17:44:55+01:00
