--- a/README
+++ b/README
@@ -116,9 +116,8 @@ DEPENDENCIES
     Class::Utils, Error::Pure, GraphViz, PYX::Parser.
 
 SEE ALSO
-    App::SGML2PYX, PYX PYX::Checker, PYX::Filter, PYX::Optimalization,
-    PYX::Parser, PYX::Sort, PYX::Stack, PYX::Utils, PYX::Write::Raw,
-    PYX::Write::Tags, PYX::Write::Tags::Code, PYX::XMLNorm, Task::PYX.
+    Task::PYX
+        Install the PYX modules.
 
 REPOSITORY
     <https://github.com/tupinek/PYX-GraphViz>
