--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.05
+ - Fix link to image in doc.
  - Update Module::Install to 1.19 version.
  - Update copyright years.
  - Update my name to actual version.
