--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
  - Fix Makefile.PL which fails with no '.' in @INC.
  - Fix link to image in doc.
  - Improve LICENSE AND COPYRIGHT section in doc.
+ - Rewrite bugtracker to github.
  - Update Module::Install to 1.21 version.
  - Update copyright years.
  - Update my name to actual version.
