--- a/TODO
+++ b/TODO
@@ -4,7 +4,8 @@ TODO
 2. Dodelat prepinac ruznych vystupu.
 3. Do prikladu udelat argument pro vystupni soubor.
 5. Prepsat na GraphViz2.
-8.
+8. Fix ci and installation of GraphViz
+9.
 
 Applied
 =======
