--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
  - Fix link to image in doc.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SYNOPSIS section in doc.
+ - Rename example file to better name.
  - Rewrite bugtracker to github.
  - Rewrite to new author github username.
  - Update Module::Install to 1.21 version.
